--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -47,7 +47,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## The Challenge\n",
     "\n",
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,26 +90,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here\n"
+    "# Write your code here\n",
+    "corpus = []\n",
+    "\n",
+    "for x in docs:\n",
+    "    corpus.append(open(x,\"r\").read()) # defini primeiro o forloop para perceber a logica e só depois é que pensei em fazer o append.\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "Print `corpus`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(corpus)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,11 +151,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "\n",
+    "corpus1 = []\n",
+    "\n",
+    "for x in corpus:\n",
+    "    corpus1.append(x.replace('.', '').lower())\n",
+    "\n",
+    "\n",
+    "print(corpus1)"
    ]
   },
   {
@@ -148,10 +183,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bag_of_words = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,11 +203,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'ironhack', 'i', 'am', 'a', 'student', 'at', 'ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here\n"
+    "# Write your code here\n",
+    "for i in corpus1:\n",
+    "    words = i.split(' ')\n",
+    "    for x in words:\n",
+    "        bag_of_words.append(x)\n",
+    "        \n",
+    "print(bag_of_words)"
    ]
   },
   {
@@ -186,10 +237,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n",
+      "['ironhack', 'is', 'cool', 'i', 'love', 'ironhack', 'i', 'am', 'a', 'student', 'at', 'ironhack']\n"
+     ]
+    }
+   ],
+   "source": [
+    "/print corpus1\n",
+    "/print bag_of_words"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,11 +263,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1], [1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1], [1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here\n"
+    "# Write your code here   | eu quero fazer loop em corpus e em cada loop criar um subloop para iterar os termos em bag of words. tudo isto para contar quantas vezes aparecem os termos no corpus , no fim adicionar a term freq\n",
+    "term_freq = []\n",
+    "\n",
+    "for terms in corpus1:\n",
+    "    sa = []\n",
+    "    for t in bag_of_words:\n",
+    "        sa.append(terms.split().count(t))\n",
+    "    term_freq.append(sa)\n",
+    "        \n",
+    "print(term_freq)\n",
+    "        "
    ]
   },
   {
@@ -318,9 +399,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
