--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -33,12 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "' '.join(str_list)"
    ]
   },
   {
@@ -50,12 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bananas', 'bread', 'Brownie Mix', 'broccoli']\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "Grocery_list = []\n",
+    "for z in food_list:\n",
+    "    if z.lower()[0] == \"b\":\n",
+    "        Grocery_list.append(z)\n",
+    "print(Grocery_list)"
    ]
   },
   {
@@ -106,9 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire,\\nSome', 'say', 'in', 'ice.\\nFrom', 'what', 'I’ve', 'tasted', 'of', 'desire\\nI', 'hold', 'with', 'those', 'who', 'favor', 'fire.\\nBut', 'if', 'it', 'had', 'to', 'perish', 'twice,\\nI', 'think', 'I', 'know', 'enough', 'of', 'hate\\nTo', 'say', 'that', 'for', 'destruction', 'ice\\nIs', 'also', 'great\\nAnd', 'would', 'suffice.']\n",
+      "{'Some': 1, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire,\\nSome': 1, 'ice.\\nFrom': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire\\nI': 1, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'fire.\\nBut': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice,\\nI': 1, 'think': 1, 'I': 1, 'know': 1, 'enough': 1, 'hate\\nTo': 1, 'that': 1, 'for': 1, 'destruction': 1, 'ice\\nIs': 1, 'also': 1, 'great\\nAnd': 1, 'would': 1, 'suffice.': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +154,19 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "#a = poem.split(\" \")\n",
+    "#print(a)\n",
+    "\n",
+    "new_dict = {}\n",
+    "\n",
+    "for i in a:\n",
+    "    if i in new_dict:\n",
+    "        new_dict[i]+=1\n",
+    "    else:\n",
+    "        new_dict[i]=1\n",
+    "        \n",
+    "print(new_dict)"
    ]
   },
   {
@@ -240,9 +286,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
